--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,7 +1,7 @@
-.block {
+/* .block {
   display: block;
   width: 100%;
-}
+} */
 footer {
   width: 100%;
 
