--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -13,7 +13,7 @@ body {
   background-color: #151b27;
 }
 header {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 .block {
