--- a/assets/css/organisedTournament.css
+++ b/assets/css/organisedTournament.css
@@ -9,7 +9,7 @@
   color: #f2f2f2;
 }
 body {
-    width: 100vw;
+    width: 100%;
     background-color: #151b27;
   }
 
