--- a/assets/css/tournamentSheet.css
+++ b/assets/css/tournamentSheet.css
@@ -22,7 +22,8 @@ main{
 }
 h1{
   width: 100%;
-  margin: 0 auto 0 1.5rem;
+  margin: 0 auto;
+  padding-left: 2rem;
 }
 
 
@@ -32,7 +33,7 @@ h1{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: auto;
+  margin: 0 auto;
 }
 .info-general-tournament-sheet{
   width: 100%;
@@ -166,7 +167,7 @@ h4{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin: 0 auto 50px;
+  margin: 0 auto 150px;
 
 }
 .container-structure-tournament{
@@ -187,6 +188,7 @@ h4{
 @media (min-width: 768px) {
  h1{
   width: 60%;
+  max-width: 850px;
   margin: 0 auto;
   padding-left: 10px
 
@@ -246,10 +248,14 @@ h4{
 @media (min-width: 1024px)  {
   .info-general-tournament-sheet{
     max-width: 650px;
+    width: 55%;
   }
   .container-structure-tournament{
     max-width: 650px;
+    width: 55%;
   }
+  
+  
 
   
 
@@ -261,6 +267,15 @@ h4{
     left: 85%;
     padding: 5rem 0 0 1.5rem;
   }
+
+.info-general-tournament-sheet{
+  max-width: 850px;
+  width: 60%;
+}
+.container-structure-tournament{
+  max-width: 850px;
+  width: 60%;
+}
 }
 @media (min-width: 1595px) {
   .container-list-sub-desktop{
